--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 	<meta name="robots" content="index,follow">
 
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
-	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="style.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
 
-	<script async src="./js/jquery-2.1.0.js"></script>
-	<script async src="./js/bootstrap.js"></script>
-	<script async src="./js/blocs.js"></script>
-	<script async src="./js/jquery.touchSwipe.js" defer></script>
-	<script async src="./js/gmaps.js"></script>
+	<script async src="./js/jquery-2.1.0.min.js"></script>
+	<script async src="./js/bootstrap.min.js"></script>
+	<script async src="./js/blocs.min.js"></script>
+	<script async src="./js/jquery.touchSwipe.min.js"></script>
+	<script async src="./js/gmaps.min.js"></script>
 
 	<title>Entreprise Webdesign Lyon - La Chouette agence</title>
 
@@ -51,7 +51,10 @@
 					<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 						<ul class="site-navigation nav navbar-nav">
 							<li>
-								<a href="page2.html">Contactez-nous</a>
+								<a href="index.html">Accueil</a>
+							</li>
+							<li>
+								<a href="la-chouette-agence-lyon.html">Contactez-nous</a>
 							</li>
 						</ul>
 					</div>
@@ -73,7 +76,7 @@
 							Entreprise de Web design basée à Lyon
 						</h1>
 						<div class="text-center">
-							<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
+							<a href="la-chouette-agence-lyon.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
 								id="cta-hero">Contact</a>
 						</div>
 					</div>
@@ -180,9 +183,9 @@
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
 					<section class="col-sm-6">
-						<a href="#" data-lightbox="img/1.webp" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1"
 							data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
-								src="img/1.webp"
+								src="img/1.jpg"
 								alt="livres illustrant l'entreprise lyonaise pour laquelle nous avons refait le design du site internet"
 								class="img-responsive portfolio-thumb" /></a>
 						<h3 class="mg-md text-center">
@@ -193,9 +196,9 @@
 						</p>
 					</section>
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/2.webp" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1"
 							data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img
-								src="img/2.webp" class="img-responsive portfolio-thumb"
+								src="img/2.jpg" class="img-responsive portfolio-thumb"
 								alt="Photographe à qui nous avons créée un site web pour photographes" /></a>
 						<h3 class="mg-md text-center">
 							Création d'un site web pour photographes
@@ -207,9 +210,9 @@
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/3.webp" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1"
 							data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img
-								src="img/3.webp" class="img-responsive portfolio-thumb"
+								src="img/3.jpg" class="img-responsive portfolio-thumb"
 								alt="Photo d'outils illustrant notre capacité à créer un site web pour un voyageur" /></a>
 						<h3 class="mg-md text-center">
 							Création d'un site internet pour un voyageur
@@ -220,10 +223,10 @@
 						</p>
 					</div>
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/4.webp" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1"
 							data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img
-								src="img/4.webp" class="img-responsive portfolio-thumb"
-								alt="Photo de préparatif d'un mariage, illustrant notre capacité à créer un site pour une agence de mariage" /></a>
+								src="img/4.jpg" class="img-responsive portfolio-thumb"
+								alt="Photo illustrant notre capacité à créer un site pour une agence de mariage"/></a>
 						<h3 class="mg-md text-center">
 							Conception d'un site pour une agence de mariage
 						</h3>
@@ -245,7 +248,7 @@
 						Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 					</h2>
 					<div class="col-sm-12 text-center">
-						<a href="page2.html"
+						<a href="la-chouette-agence-lyon.html"
 							class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 					</div>
 				</div>
@@ -264,34 +267,23 @@
 						<div class="row row-no-gutters social">
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-twitter icon-md icon"></span></a>
+									<a aria-label="twitter" class="social" href="https://twitter.com"><span class="fa fa-twitter icon-md icon"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-facebook icon-md icon"></span></a>
+									<a aria-label="facebook" class="social" href="https://www.facebook.com"><span class="fa fa-facebook icon-md icon"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-dribbble icon-md icon"></span></a>
+									<a aria-label="dribbble" class="social" href="https://dribbble.com"><span class="fa fa-dribbble icon-md icon"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3 socialindex">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-instagram icon-md icon"></span></a>
+									<a aria-label="instagram" class="social" href="https://www.instagram.com"><span class="fa fa-instagram icon-md icon"></span></a>
 								</div>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-sm-4 tc-black partenaires">
-								<span class="h1lilink">Partenaires</span>
-								<ul>
-									<li class="tc-black"><a href="voiture.com" class="tc-black">voiture.com</a></li>
-									<li class="tc-black"><a href="pizza.com" class="tc-black">pizza.com</a></li>
-									<li class="tc-black"><a href="matoiture.com" class="tc-black">matoiture.com</a></li>
-									<li class="tc-black"><a href="immobilierseo.com" class="tc-black">immobilierseo.com</a></li>
-								</ul>
 							</div>
 						</div>
 					</div>
