--- a/la-chouette-agence-lyon.html
+++ b/la-chouette-agence-lyon.html
@@ -10,17 +10,17 @@
 	<meta name="robots" content="index,follow">
 
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
-	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="style.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
 
 
-	<script async src="./js/jquery-2.1.0.js"></script>
-	<script async src="./js/bootstrap.js"></script>
-	<script async src="./js/blocs.js"></script>
-	<script async src="./js/jqBootstrapValidation.js"></script>
-	<script async src="./js/formHandler.js"></script>
+	<script async src="./js/jquery-2.1.0.min.js"></script>
+	<script async src="./js/bootstrap.min.js"></script>
+	<script async src="./js/blocs.min.js"></script>
+	<script async src="./js/jqBootstrapValidation.min.js"></script>
+	<script async src="./js/formHandler.min.js"></script>
 
 	<title>Formulaire de Contact pour l'entreprise Webdesign "La chouette agence" de Lyon</title>
 
@@ -48,6 +48,10 @@
 						<ul class="site-navigation nav navbar-nav">
 							<li>
 								<a href="index.html">Accueil</a>
+							</li>
+							<li>
+								<a href="La chouette agence - Lyon.html">Contactez-nous</a>
+							</li>
 						</ul>
 					</div>
 				</nav>
@@ -137,25 +141,25 @@
 						<div class="row row-no-gutters social">
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span
+									<a aria-label="twitter" class="social" href="https://twitter.com"><span
 											class="fa fa-twitter icon-md icon"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span
+									<a aria-label="facebook" class="social" href="https://www.facebook.com"><span
 											class="fa fa-facebook icon-md icon"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span
+									<a aria-label="dribbble" class="social" href="https://dribbble.com"><span
 											class="fa fa-dribbble icon-md icon"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span
+									<a aria-label="instagram" class="social" href="https://www.instagram.com"><span
 											class="fa fa-instagram icon-md icon"></span></a>
 								</div>
 							</div>
